teleport-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teleport-ingress
  namespace: teleport-cluster
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" #check this value with your cluster config
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - teleport.example.com
    secretName: teleport-tls
  rules:
  - host: "teleport.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: teleport-cluster
            port:
              number: 3080
